# slangtag

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
slangtag-rs/: Cargo.toml  build.rs
slangtag-rs/shaders/: blob.slang  ccl.slang  decode.slang  filter.slang  select.slang  sort.slang  threshold.slang
slangtag-rs/shaders/compute/: 01-threshold-decimate.slang  02-threshold-minmax.slang  03-threshold-filter-minmax.slang  04-threshold-threshold.slang  05-ccl-init.slang  06-ccl-compression.slang  07-ccl-merge.slang  08-ccl-final-labeling.slang  09-blob-blob-diff.slang  10-select-count-nonzero-blob-diff-points.slang  11-select-filter-nonzero-blob-diff-points.slang  12-sort-prepare-blob-diff-points.slang  13-sort-bitonic-sort-blob-diff-points.slang  14-filter-build-blob-pair-extents.slang  15-filter-filter-blob-pair-extents.slang  16-filter-rewrite-selected-blob-points-with-theta.slang  17-sort-prepare-selected-blob-points.slang  18-sort-bitonic-sort-selected-blob-points.slang  19-filter-build-line-fit-points.slang  20-filter-fit-line-errors-and-peaks.slang  21-select-count-valid-peaks.slang  22-select-filter-valid-peaks.slang  23-sort-prepare-peaks.slang  24-sort-bitonic-sort-peaks.slang  25-filter-build-peak-extents.slang  26-filter-fit-quads.slang  27-decode-prepare-decode-quads.slang  28-decode-extract-candidate-bits.slang  blob-blob-diff.slang  blob.compute.slang  ccl-compression.slang  ccl.compute.slang  decode-extract-candidate-bits.slang  decode.compute.slang  (+20 more)
slangtag-rs/src/: apriltag36h11_codes.rs  bin.rs  detect.rs  gpu.rs  gui.rs  lib.rs  sort.rs
(+69 files in other folders)
