[package]
name = "slangtag"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
vk-mem = "0.5.0"

[dev-dependencies]
eframe = "0.33.0"
colored = "3.1.1"
image = "0.25.9"
rfd = "0.15.4"

[profile.release]
debug = true

[workspace]
members = [
    "slangtag-cam"
]
